prevent temporarily showing placeholder message when changing channels or direct message channels and flickering of the textarea; perhaps textarea should be removed from if block but container ref is an issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -312,6 +312,10 @@ hr {
   position: fixed !important;
 }
 
+.height100 {
+  height: 100%;
+}
+
 // Responsive Design:
 @media (max-width: 1968px) {
   .content-wrapper {
